@@ -125,6 +125,10 @@ public class SitePropertiesComponent extends AnchorPane {
     public ObservableList<ResourceComponent> resourceComponents;
     private ObservableList<Job> siteJobs;
 
+    public ObservableList<Jobs.Job> tempJobListSites = FXCollections.observableArrayList();
+
+    public ObservableList<Jobs.Job> tempJobListBuildings = FXCollections.observableArrayList();
+
     InGameController inGameController;
 
     @Inject
@@ -171,9 +175,11 @@ public class SitePropertiesComponent extends AnchorPane {
                             && started.system().equals(this.tokenStorage.getIsland().id()))
                     .findFirst().orElse(null);
             this.showJobsPane();
+
             if (Objects.nonNull(job)) {
                 this.siteJobProgress.setJobProgress(job);
-                if (this.jobsService.hasNoJobTypeProgress(job.type()) && this.siteJobs.getFirst().equals(job))
+                buildSiteButton.setDisable(true);
+                if (this.jobsService.hasNoJobTypeProgress(job.type()) && this.siteJobs.get(0).equals(job))
                     this.jobsService.onJobTypeProgress(job.type(), () -> this.siteJobProgress.incrementProgress());
             }
         } else {
@@ -189,23 +195,31 @@ public class SitePropertiesComponent extends AnchorPane {
     }
 
     public void buildSite(){
-        this.subscriber.subscribe(this.jobsService.beginJob(Jobs.createDistrictJob(
-                this.tokenStorage.getIsland().id(), this.siteType)), job ->  {
-            this.showJobsPane();
-            this.siteJobProgress.setJobProgress(job);
+        tempJobListBuildings = jobsService.getJobObservableListOfType("building");
+        tempJobListSites = jobsService.getJobObservableListOfType("district");
 
-            if (this.jobsService.hasNoJobTypeProgress(job.type()) &&
-                    (this.siteJobs.isEmpty() || this.siteJobs.getFirst().equals(job)))
-                this.jobsService.onJobTypeProgress(job.type(), () -> this.siteJobProgress.incrementProgress());
+        int islandJobsInQueue = tempJobListBuildings.size() + tempJobListSites.size();
+        if (islandAttributeStorage.getUsedSlots() + islandJobsInQueue < islandAttributeStorage.getIsland().resourceCapacity()){
+            this.subscriber.subscribe(this.jobsService.beginJob(Jobs.createDistrictJob(
+                    this.tokenStorage.getIsland().id(), this.siteType)), job ->  {
+                this.showJobsPane();
+                this.siteJobProgress.setJobProgress(job);
+                if (this.jobsService.hasNoJobTypeProgress(job.type()) &&
+                        (this.siteJobs.isEmpty() || this.siteJobs.getFirst().equals(job)))
+                    this.jobsService.onJobTypeProgress(job.type(), () -> this.siteJobProgress.incrementProgress());
 
-            this.jobsService.onJobDeletion(job._id(), () -> {
-                if (job.district().equals(this.siteType)) this.hideJobsPane();
+                this.jobsService.onJobDeletion(job._id(), () -> {
+                    if (job.district().equals(this.siteType)) this.hideJobsPane();
+                });
+                this.jobsService.onJobCompletion(job._id(), () -> {
+                    this.updateIslandSites();
+                    if (job.district().equals(this.siteType)) this.hideJobsPane();
+                });
             });
-            this.jobsService.onJobCompletion(job._id(), () -> {
-                this.updateIslandSites();
-                if (job.district().equals(this.siteType)) this.hideJobsPane();
-            });
-        });
+        } else {
+            this.buildSiteButton.setDisable(true);
+        }
+
     }
 
     @OnInit
@@ -304,6 +318,19 @@ public class SitePropertiesComponent extends AnchorPane {
 
         buildSiteButton.setDisable(amountSiteSlots == amountSite);
         destroySiteButton.setDisable(amountSite == 0);
+
+        checkBuyButtonStatus();
+        jobsService.onJobCommonStart(this::checkBuyButtonStatus);
+
+    }
+
+    private void checkBuyButtonStatus() {
+        tempJobListBuildings = jobsService.getJobObservableListOfType("building");
+        tempJobListSites = jobsService.getJobObservableListOfType("district");
+        int islandJobsInQueue = tempJobListBuildings.size() + tempJobListSites.size();
+        if (islandAttributeStorage.getUsedSlots() + islandJobsInQueue >= islandAttributeStorage.getIsland().resourceCapacity()){
+            buildSiteButton.setDisable(true);
+        }
     }
 
     private void resourceListGeneration(DistrictAttributes site) {
